Get plotting working a little bit

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Gene expression visualization</title>
+    <meta charset="utf8">
     <link rel="stylesheet" href="dist/style.css" />
   </head>
 
