--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="dist/style.css" />
   </head>
 
-  <body>
+  <body class="bg-main">
     <div id="main" />
     <script type="text/javascript" src="dist/bundle.js"></script>
   </body>
