Revamp pvalue selector

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         text-overflow: ellipsis;
         white-space: nowrap;
       }
+
+      input[type="range"] {
+        -webkit-appearance: none;
+        -webkit-appearance: slider-vertical;
+      }
+
+
     </style>
   </head>
 
