--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
   <body class="bg-main">
     <header class="px2 flex flex-justify">
       <h1>
-        Interactive visualizer of differential gene expression
-        in the early <i>C. elegans</i> embryo
+        <a class="white" href="/">
+          Interactive visualizer of differential gene expression
+          in the early <i>C. elegans</i> embryo
+        </a>
       </h1>
-      <a href="#" class="bold white">About</a>
+      <a href="about.html" class="bold white">About</a>
     </header>
     <main id="application" class="relative" style="height: calc(100vh - 40px)"></main>
     <script type="text/javascript" src="dist/bundle.js"></script>
