Add source to about page

--- a/about.html
+++ b/about.html
@@ -84,6 +84,8 @@
 
       <p>
       Coded by Patrick Golden
+      <br />
+      <a href="https://github.com/ptgolden/ma-browser">Source</a>
       </p>
 
       <div>Please cite this tool as:</div>
