--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Gene expression visualization</title>
     <meta charset="utf8">
-    <link rel="stylesheet" href="dist/style.css" />
+    <link rel="stylesheet" href="dist/mabrowser.css" />
     
     <style type="text/css">
       header {
@@ -49,6 +49,6 @@
       <a href="about.html" class="bold white">About</a>
     </header>
     <main id="application" class="relative" style="height: calc(100vh - 40px)"></main>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <script type="text/javascript" src="dist/mabrowser.js"></script>
   </body>
 </html>
