Fix CSS source typo. Fix README instructions

--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
   <head>
     <title>Gene expression visualization</title>
     <meta charset="utf8">
-    <link rel="stylesheet" href="dist/style.css" />
-    
+    <link rel="stylesheet" href="dist/mabrowser.css" />
+
     <style type="text/css">
       header {
         height: 40px;
@@ -15,7 +15,7 @@
 
         border-bottom: 1px solid #ccc;
         box-sizing: border-box;
-      } 
+      }
 
       header h1 {
         margin: 0;
@@ -57,7 +57,7 @@
         </p>
 
         <p>
-        At the center of the tool is an MA plot, which plots genes by their average expression 
+        At the center of the tool is an MA plot, which plots genes by their average expression
         level (x-axis), and by the extent to which transcripts are enriched in one of two samples being compared (y-axis). The user can select which two samples t hey wish to compare by clicking on cells or whole embryos above and below the plot.
         </p>
 
@@ -66,12 +66,12 @@
         </p>
 
         <p>
-        The watched gene list can be sorted by a number of features (enrichment in on sample or 
+        The watched gene list can be sorted by a number of features (enrichment in on sample or
         the other, average abundan
-        ce, and others), and can also be exported. To view a summary 
-        of gene expression in all samples through all time points, the user can click on any gene 
-        name in the table, and retrieve a pictogram of all stages, with cells colored by quantitative 
-        expression 
+        ce, and others), and can also be exported. To view a summary
+        of gene expression in all samples through all time points, the user can click on any gene
+        name in the table, and retrieve a pictogram of all stages, with cells colored by quantitative
+        expression
         data.
         </p>
     </section>
@@ -90,7 +90,7 @@
 
       <div>Please cite this tool as:</div>
       <div style="margin-left: 1em;">
-      Tintori, SC, Osborne Nishimura, E, Golden, PT, Lieb, JD, Goldstein, B. 2016. A 
+      Tintori, SC, Osborne Nishimura, E, Golden, PT, Lieb, JD, Goldstein, B. 2016. A
       Transcriptional Lineage of Early C. Elegans Development. (In Preparation).
       </div>
     </section>
