Rename sample -> treatment

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
         <p>
         At the center of the tool is an MA plot, which plots genes by their average expression
-        level (x-axis), and by the extent to which transcripts are enriched in one of two samples being compared (y-axis). The user can select which two samples t hey wish to compare by clicking on cells or whole embryos above and below the plot.
+        level (x-axis), and by the extent to which transcripts are enriched in one of two treatments being compared (y-axis). The user can select which two treatments t hey wish to compare by clicking on cells or whole embryos above and below the plot.
         </p>
 
         <p>
@@ -66,10 +66,10 @@
         </p>
 
         <p>
-        The watched gene list can be sorted by a number of features (enrichment in on sample or
+        The watched gene list can be sorted by a number of features (enrichment in on treatment or
         the other, average abundan
         ce, and others), and can also be exported. To view a summary
-        of gene expression in all samples through all time points, the user can click on any gene
+        of gene expression in all treatments through all time points, the user can click on any gene
         name in the table, and retrieve a pictogram of all stages, with cells colored by quantitative
         expression
         data.
