Use "dredge" as site name in all cases

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <title>Gene expression visualization</title>
     <meta charset="utf8">
-    <link rel="stylesheet" href="dist/mabrowser.css" />
+    <link rel="stylesheet" href="dist/dredge.css" />
 
     <style type="text/css">
       header {
