--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
   <body>
     <div id="application"></main>
-    <script type="text/javascript" src="dist/mabrowser.js"></script>
+    <script type="text/javascript" src="dist/dredge.js"></script>
   </body>
 </html>
