Add template for setting a the single configured project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <title>Gene expression visualization</title>
     <meta charset="utf8">
+
+    <script type="text/javascript">
+      // To configure DrEdGE to load your project, uncomment the line below this
+      // paragraph, changing the string the location of the JSON configuration
+      // file you generated with the project configuration form.
+      //
+      // window.DREDGE_PROJECT_CONFIG_URL = 'path/to/project.json'
+    </script>
   </head>
 
   <body>
