Preload font in index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Gene expression visualization</title>
     <meta charset="utf8">
+    <link rel="preload" as="font" crossorigin="anonymous" href="lib/SourceSansPro-Regular.otf">
 
     <script type="text/javascript">
       // To configure DrEdGE to load your project, uncomment the line below this
