Properly set the document title on page changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Gene expression visualization</title>
+    <title>DrEdGE</title>
     <meta charset="utf8">
     <link rel="preload" as="font" crossorigin="anonymous" href="lib/SourceSansPro-Regular.otf">
 
