--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <link rel="preload" as="font" crossorigin="anonymous" href="lib/SourceSansPro-Regular.otf">
 
     <script type="text/javascript">
-      // To configure DrEdGE to load your project, uncomment the line below this
-      // paragraph, changing the string the location of the JSON configuration
-      // file you generated with the project configuration form.
-      //
-      // window.DREDGE_PROJECT_CONFIG_URL = 'path/to/project.json'
+      /*
+
+      To configure DrEdGE to load your project, change the variable below to
+      point the JSON configuration file that you generated with the project
+      creation form.
+
+      For example:
+
+      window.DREDGE_PROJECT_CONFIG_URL = './data/project/json'
+
+      */
+
+
+      window.DREDGE_PROJECT_CONFIG_URL = ''
     </script>
   </head>
 
