--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       For example:
 
-      window.DREDGE_PROJECT_CONFIG_URL = './data/project/json'
+      window.DREDGE_PROJECT_CONFIG_URL = './data/project.json'
 
       */
 
