Put the @font-face declaration in html <head>
This prevents FOUT in Firefox when CSS-in-JS updates

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <title>DrEdGE</title>
     <meta charset="utf8">
     <link rel="preload" as="font" crossorigin="anonymous" href="lib/SourceSansPro-Regular.otf">
+    <style type="text/css">
+      @font-face {
+        font-family: SourceSansPro;
+        src: url("lib/SourceSansPro-Regular.otf") format("opentype");
+      }
+    </style>
   </head>
 
   <body>
-    <div id="application"></main>
+    <div id="application"></div>
     <script type="text/javascript" src="dist/dredge.js"></script>
   </body>
 </html>
