--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>DrEdGE</title>
     <meta charset="utf8">
+    <meta http-equiv="Content-Language" content="en_US">
     <link rel="preload" as="font" crossorigin="anonymous" href="lib/SourceSansPro-Regular.otf">
     <style type="text/css">
       @font-face {
